# PRF192-MenuAssignment

./: CMakeLists.txt  main  main.c
inputs/: input2.txt
options/: option2.c
